style: fix image overflow

--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -7,10 +7,14 @@
 .imageContainer {
     width: 100px;
     height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;;
 }
 .imageContainer img {
-    width: 100%;
-    object-fit: cover;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
 }
 
 .info {
@@ -28,6 +32,7 @@
     flex-direction: column;
     align-items: flex-end;
     gap: 0.5em;
+    white-space: nowrap;
 }
 .buttonsContainer button {
     background-color: white;
